SVN
---

XML:   Resolved issue CASTOR-1982 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed a problem with namespace processing in the context of substitution groups.
       Details: http://jira.codehaus.org/browse/CASTOR-1982
       (Werner - 20070514)

XML:   Resolved issue CASTOR-1981 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed a problem with the processing of substitution groups if sequence order validation enabled.
       Details: http://jira.codehaus.org/browse/CASTOR-1981
       (Werner - 20070514)

XML:   Resolved issue CASTOR-1971 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Made org.exolab.castor.persists.spi.Identity implement java.io.Serializable.
       Details: http://jira.codehaus.org/browse/CASTOR-1971
       (Werner - 20070509)

XML:   Resolved issue CASTOR-1964 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with picking up SAX features from custom castor.properties.
       Details: http://jira.codehaus.org/browse/CASTOR-1964
       (Werner - 200705056)

XML:   Resolved issue CASTOR-1896 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Introduced new 'lenient' properties in castor.properties so that new sequence order and id/href
       validation can be selectively turned off.
       Details: http://jira.codehaus.org/browse/CASTOR-1962
       (Werner - 20070505)

XML:   Resolved issue CASTOR-1896 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Removed (illegal) underscores from calls to PropertyChangeListeners.
       Details: http://jira.codehaus.org/browse/CASTOR-1896
       (Werner - 20070502)

XML:   Resolved issue CASTOR-1957 using contribution from Paul Philion [philion@gmail.com]
       Switched logging for Unmarshaller/UnmarshalHandler to commons-logging.
       Details: http://jira.codehaus.org/browse/CASTOR-1957
       (Werner - 20070430)
